# CHIP-8

./: .gitignore  CMakeLists.txt
Project/: CHIP8.sln
Project/CHIP8/: CHIP8.vcxproj  main.cpp
cmake/: CopyAssets.cmake
code/: main.c
doc/: CHIP-8 Roms.url  Guide to making a CHIP-8 emulator (July 2020).url
scripts/: CopyAssets.py
